build.log
clang -Wall -Wextra -Werror   -c -o five_numbers.o five_numbers.c
clang -Wall -Wextra -Werror   -c -o ft_list_utils.o ft_list_utils.c
clang -Wall -Wextra -Werror   -c -o ft_utils.o ft_utils.c
ft_utils.c:53:16: error: expected expression
                        write_error(void);
                                    ^
ft_utils.c:66:15: error: expected expression
                write_error(void);
                            ^
2 errors generated.
make: *** [<builtin>: ft_utils.o] Error 1
